--- a/src/app/holiday-details/holiday-details.component.html
+++ b/src/app/holiday-details/holiday-details.component.html
@@ -6,7 +6,7 @@
     <div class="img">
         <div class="text-center font-weight-bold display-4"> {{holiday.name | uppercase}}</div>
         <img [src]="holiday.imgSrc" alt="">
-        <div>
+        <div *ngIf="this.userRole >= 2">
             <ng-conatiner *ngFor="let star of stars">
                 <app-stars (starEnter)="onStarEnter($event)" (starLeave)="onStarLeave()" (starClicked)="onStarClick($event)" [starId]="star" [rating]="hoverState || rating"></app-stars>
             </ng-conatiner>
